--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -163,6 +163,8 @@
     <add key="GetListaCajaGralId" value="api/ventas/buscar/listacajageneral/" />
     <add key="GetListaCajaGralCamioneta" value="api/ventas/buscar/listacajageneralcamioneta/" />
     <add key="GetListaCajaGralEstacion" value="api/ventas/buscar/listacajageneralestacion/" />
+    <add key="PutLiquidarCajaGral" value="api/ventas/Modifica/liquidarcajageneral" />
+    <add key="PutLiquidarCajaGralEst" value="api/ventas/Modifica/liquidarcajageneralest" />
     <!-- Ventas -->
   </appSettings>
   <system.web>
@@ -174,7 +176,9 @@
     </pages>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" 
+                 maxRequestLength="1048576"
+                 enableVersionHeader="true"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
@@ -193,7 +197,13 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="30000000" />
+      </requestFiltering>
+    </security>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
