--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/packages.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/packages.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ACE" version="1.0.1" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="cldrjs" version="0.4.8" targetFramework="net452" />
+  <package id="EasyNetQ" version="0.47.10.380" targetFramework="net452" />
+  <package id="EasyNetQ.DI.Ninject" version="0.47.10.380" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.es" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="jquery-globalize" version="1.3" targetFramework="net452" />
+  <package id="knockoutjs" version="3.4.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net452" />
@@ -22,8 +29,8 @@
   <package id="Microsoft.AspNet.Identity.Owin.es" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor.es" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor.es" version="3.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization.es" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net452" />
@@ -33,8 +40,11 @@
   <package id="Microsoft.AspNet.WebApi.Core.es" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages.es" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.es" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.6" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
@@ -57,7 +67,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="RabbitMQ.Client" version="3.4.3" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
