--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -147,6 +147,7 @@
     <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
     <add key="GetOrdenCompraEntrada" value="api/almacen/buscar/ordecompraentrada/" />
     <add key="GetProductosAlmacen" value="api/almacen/buscar/productos/" />
+    <add key="GetRegistroAlmacen" value="api/almacen/buscar/registro/" />
     <add key="PostActulizarAlmacenProducto" value="api/almacen/actualiza/almacenproducto" />
     <!-- Almacen -->
     <!-- Ventas -->
