JSA-18/10/2018 Modificación almacen
Se hacen cambios en:
-Actualización de almacén:
*Nuevo campo de Justificación
*Diseño en general
-Entradas-Salidas:
*Diseño en genera.
*Se definen Formatos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -18,6 +18,9 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MVC.Presentacion-20180904054745.mdf;Initial Catalog=aspnet-MVC.Presentacion-20180904054745;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <!--Formatos-->
+    <add key="FechaHora_F24H" value="dd/MM/yyyy HH:mm" />
+    <!--Formatos-->
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
