JSA-19/10/2018 Avance Salidas Mercancia

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11482,6 +11482,7 @@
     <Content Include="Views\Almacen\_gvProductosPartial.cshtml" />
     <Content Include="Views\Almacen\MovimientosAlamacen.cshtml" />
     <Content Include="Views\Almacen\_RegistroPartial.cshtml" />
+    <Content Include="Views\Almacen\_SalidaRequisicionesPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
