JSA-19/10/2018 Salida producto
Se termina codificación, falta probar

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -148,10 +148,13 @@
     <!--Compras-->
     <!-- Almacen -->
     <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
+    <add key="PostGuardarSalida" value="api/almacen/salida/producto" />
+    <add key="PostActulizarAlmacenProducto" value="api/almacen/actualiza/almacenproducto" />
     <add key="GetOrdenCompraEntrada" value="api/almacen/buscar/ordecompraentrada/" />
     <add key="GetProductosAlmacen" value="api/almacen/buscar/productos/" />
+    <add key="GetRequisiconAlmacen" value="api/almacen/buscar/almacen/requisicion/" />
     <add key="GetRegistroAlmacen" value="api/almacen/buscar/registro/" />
-    <add key="PostActulizarAlmacenProducto" value="api/almacen/actualiza/almacenproducto" />
+
     <!-- Almacen -->
     <!-- Ventas -->
     <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
