JSA-22/10/2018 Mejora Layout

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11487,6 +11487,7 @@
     <Content Include="Views\Almacen\_SalidaRequisicionesPartial.cshtml" />
     <Content Include="Views\Almacen\Salida.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\AlmacenSalidaDTO.cshtml" />
+    <Content Include="Views\Shared\_Perfil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
