--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
@@ -36,11 +36,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.jsibbold:zoomage:1.1.0'
 
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-messaging:17.3.2'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
+    implementation 'it.sephiroth.android.library.targettooltip:target-tooltip-library:1.3.15'
 }
 
 repositories {
