--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -145,6 +145,7 @@
     <add key="PutConfirmarPago" value="api/compras/guardar/confirmacionpago" />
     <add key="PostGenerarPago" value="api/compras/guardar/pago" />
     <add key="GetListaPagos" value="api/compras/buscar/pagos/" />
+    <add key="PutAutorizarProductoOordenCompra" value="api/compras/actualiza/productos/ordencompra" />
     <!--Compras-->
     <!-- Almacen -->
     <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
