JOTM-30/10/2018-Detalles de diseño y catalogo de venta cilindro
*Diseño de menu
* Catalogo de ventas

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -107,6 +107,7 @@
     <Compile Include="DTOs\Mobile\DatosAutoconsumoDto.cs" />
     <Compile Include="DTOs\Mobile\DatosCalibracionDto.cs" />
     <Compile Include="DTOs\Mobile\DatosClientesDto.cs" />
+    <Compile Include="DTOs\Mobile\DatosGasVentaDto.cs" />
     <Compile Include="DTOs\Mobile\DatosOtrosDto.cs" />
     <Compile Include="DTOs\Mobile\DatosRecargaDto.cs" />
     <Compile Include="DTOs\Mobile\DatosTraspasoDto.cs" />
