--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:roundIcon="@mipmap/ic_sagas_launcher_round"
         android:supportsRtl="true"
 
-        android:theme="@style/SagasTheme">
+        android:theme="@style/SagasTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Activity.MainActivity" android:theme="@style/SagasTheme" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
