CJAL-02/11/2018- Se creo pagina de error 404

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11519,6 +11519,7 @@
     <Content Include="Views\OrdenCompra\_ProductosOCPartial.cshtml" />
     <Content Include="Views\OrdenCompra\_ProductosComplementoGasPartial.cshtml" />
     <Content Include="Views\OrdenCompra\_ProductComplementoPartial.cshtml" />
+    <Content Include="Views\Shared\Error404.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
