--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -167,6 +167,10 @@
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
+    <customErrors defaultRedirect="Error404.cshtml" mode="On">
+      <error statusCode="404" redirect="Error404.cshtml"/>
+    </customErrors>
+
     <pages validateRequest="true" clientIDMode="Predictable">
       <controls>
         <add assembly="System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" namespace="System.Web.Mvc" tagPrefix="mvc" />
