--- a/1.Layers/1.1Presentation/1.1.2Mobile/local.properties
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 17 08:25:45 CDT 2018
-sdk.dir=C\:\\Users\\Neoteck\\AppData\\Local\\Android\\Sdk
+#Fri Nov 02 12:32:38 CST 2018
+sdk.dir=/Users/neotecknewts/Library/Android/sdk
